fixing and testing new method

--- a/facebook_group_file_downloader/bot_beta.ipynb
+++ b/facebook_group_file_downloader/bot_beta.ipynb
@@ -42,7 +42,7 @@
     "encoding = \"utf-8\"\n",
     "target_file_type = \"pdf\"\n",
     "log_file_location = \"bot_tmp.log\"\n",
-    "tracker_file_location = \"files_info.json\" # this keeps track of every downloaded file\n",
+    "tracker_file_location = \"files_info.json\" # this file keeps track of every downloaded file\n",
     "\n",
     "# For obvious reason 😉\n",
     "with open(\".secret\", encoding=encoding) as f:\n",
@@ -195,26 +195,32 @@
     "# wait 60s before determining that there is no more files to load #\n",
     "###################################################################\n",
     "def loadMoreFiles(files_to_load, identifier, timeout=60, n_scroll=1):\n",
-    "    for _ in range(n_scroll):  # scroll for n times\n",
+    "    for _ in range(n_scroll):  # do this operation(scroll to load) for n times\n",
     "        driver.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
     "\n",
     "        seconds = 0\n",
-    "        current_len = len(files_to_load)\n",
+    "        current_len = len(files_to_load[0])\n",
     "\n",
-    "        while (current_len >= len(files_to_load)) and seconds < timeout:\n",
-    "            time.sleep(\n",
-    "                1.5\n",
-    "            )  # wait every 1.5s before checking again -> because 1s is too fast :V\n",
+    "        ########################################################################\n",
+    "        # If the first one is loaded then all others will surely get loaded    #\n",
+    "        # so you don't have to check the whole length of 'files_to_load' array #\n",
+    "        # but if you want you can do something like this ->                    #\n",
+    "        # current_len = sum(len(i) for i in files_to_load)                     #\n",
+    "        ########################################################################\n",
+    "        while (current_len >= len(files_to_load[0])) and seconds < timeout:\n",
+    "            time.sleep(1)\n",
     "\n",
-    "            files_to_load.extend(\n",
-    "                [\n",
-    "                    element\n",
-    "                    for element in driver.find_elements(By.XPATH, identifier)\n",
-    "                    if element not in files_to_load\n",
-    "                ]\n",
-    "            )\n",
+    "            # iterate through all the files that are needed to be loaded\n",
+    "            for idx, _ in enumerate(files_to_load):\n",
+    "                files_to_load[idx].extend(\n",
+    "                    [\n",
+    "                        element\n",
+    "                        for element in driver.find_elements(By.XPATH, identifier[idx])\n",
+    "                        if element not in files_to_load[idx]\n",
+    "                    ]\n",
+    "                )\n",
     "\n",
-    "            seconds += 1.5\n",
+    "            seconds += 1\n",
     "\n",
     "    return files_to_load\n",
     "\n",
@@ -281,27 +287,29 @@
     "    3  # this value will ensure how many downloads will happen concurrently\n",
     ")\n",
     "\n",
-    "# to wait until the element is ready -> Explicit Waits\n",
-    "wait = WebDriverWait(driver, 10)\n",
+    "wait = WebDriverWait(driver, 10) # to wait until the element is ready -> Explicit Waits\n",
     "\n",
-    "##################################################################################\n",
+    "\"\"\"\n",
     "# targets identifiers                                                            #\n",
     "# this identifiers will change continuously so update it according to your needs #\n",
-    "##################################################################################\n",
-    "fileOption_xpath = \"//div[@aria-label='File options']\"  # find 15 per-scroll\n",
+    "\n",
+    "\"\"\"\n",
+    "download_button_cssSelector = \"a[href*='https://www.facebook.com/download/']\"\n",
+    "fileOption_xpath = \"//div[@aria-label='File options']\"  # by default finds 15 per-scroll\n",
     "fileName_xpath = \"//span[@class='d2edcug0 hpfvmrgz qv66sw1b c1et5uql lr9zc1uh a8c37x1j fe6kdd0r mau55g9w c8b282yb keod5gw0 nxhoafnm aigsh9s9 d3f4x2em iv3no6db jq4qci2q a3bd9o3v lrazzd5p oo9gr5id hzawbc8m']\"  # find 15 per-scroll\n",
     "fileTypeDate_xpath = \"//span[@class='d2edcug0 hpfvmrgz qv66sw1b c1et5uql lr9zc1uh a8c37x1j fe6kdd0r mau55g9w c8b282yb keod5gw0 nxhoafnm aigsh9s9 d9wwppkn iv3no6db e9vueds3 j5wam9gi b1v8xokw oo9gr5id hzawbc8m']\"  # find 30 per-scroll\n",
+    "\n",
+    "###########################################################\n",
+    "# NOT NEEDED -> as it doesn't sort by file type reliably 😑\n",
+    "###########################################################\n",
     "# sortButtons_xpath = \"//div[@class='l9j0dhe7 du4w35lb j83agx80 pfnyh3mw taijpn5t bp9cbjyn owycx6da btwxx1t3 kt9q3ron ak7q8e6j isp2s0ed ri5dt5u2 rt8b4zig n8ej3o3l agehan2d sk4xxmp2 rq0escxv d1544ag0 tw6a2znq tdjehn4e tv7at329']\" # find 3 per-scroll\n",
     "\n",
-    "#########################################################################\n",
-    "# NOT NEEDED -> as it doesn't sort by file type reliably 😑\n",
     "# sortButtons = wait.until(\n",
     "#     EC.presence_of_all_elements_located((By.XPATH, sortButtons_xpath))\n",
     "# )\n",
     "\n",
     "# # sort by file_type (PDF at the top in my case)\n",
-    "# driver.execute_script(\"arguments[0].click();\", sortButtons[1])\n",
-    "#########################################################################\n"
+    "# driver.execute_script(\"arguments[0].click();\", sortButtons[1])\n"
    ]
   },
   {
@@ -310,7 +318,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# initial target search\n",
+    "j, k = 0, 1\n",
+    "registered_files_count = sum(\n",
+    "    1 for _ in open(log_file_location, encoding=encoding)\n",
+    ")  # total files registered in the log file\n",
+    "\n",
+    "##################################\n",
+    "# grabbing initial loaded target #\n",
+    "##################################\n",
     "file_option_buttons = wait.until(\n",
     "    EC.presence_of_all_elements_located((By.XPATH, fileOption_xpath))\n",
     ")\n",
@@ -319,53 +334,39 @@
     "    EC.presence_of_all_elements_located((By.XPATH, fileTypeDate_xpath))\n",
     ")\n",
     "\n",
-    "j, k = 0, 1\n",
-    "registered_files_count = sum(\n",
-    "    1 for line in open(log_file_location, encoding=encoding)\n",
-    ")  # total files registered in the log file\n",
-    "\n",
     "for idx, button in enumerate(file_option_buttons):\n",
     "    try:\n",
     "        _name = file_names[idx].text\n",
     "        _type = file_types_and_dates[j].text\n",
     "        _date = file_types_and_dates[k].text\n",
     "\n",
-    "        # as file_types_and_dates contains both type and date\n",
+    "        # as 'file_types_and_dates' contains both file-type and date\n",
     "        j += 2\n",
     "        k += 2\n",
     "\n",
-    "        # scroll after 15th button click to load more files (as 15 files load per scroll)\n",
+    "        # Scroll after 15th button click to load more files (as by default 15 files loads per scroll)\n",
     "        if (idx + 1) % 15 == 0:\n",
-    "            file_option_buttons = loadMoreFiles(file_option_buttons, fileOption_xpath)\n",
-    "\n",
-    "            file_names.extend(\n",
-    "                [\n",
-    "                    name\n",
-    "                    for name in driver.find_elements(By.XPATH, fileName_xpath)\n",
-    "                    if name not in file_names\n",
-    "                ]\n",
+    "            [file_option_buttons, file_names, file_types_and_dates] = loadMoreFiles(\n",
+    "                [file_option_buttons, file_names, file_types_and_dates],\n",
+    "                [fileOption_xpath, fileName_xpath, fileTypeDate_xpath],\n",
     "            )\n",
     "\n",
-    "            file_types_and_dates.extend(\n",
-    "                [\n",
-    "                    type_date\n",
-    "                    for type_date in driver.find_elements(By.XPATH, fileTypeDate_xpath)\n",
-    "                    if type_date not in file_types_and_dates\n",
-    "                ]\n",
-    "            )\n",
-    "\n",
-    "        ######################################################################################################################\n",
-    "        # download pdf files only                                                                                            #\n",
-    "        # cannot check it before the scroll because there is a possibility to have more than one page worth of non-pdf files #\n",
-    "        ######################################################################################################################\n",
+    "        ############################################################################\n",
+    "        # Download pdf files only                                                  #\n",
+    "        # Cannot check this before the scroll because                              #\n",
+    "        # there is a possibility to have more than one page worth of non-pdf files #\n",
+    "        ############################################################################\n",
     "        if not _type == target_file_type.upper():\n",
     "            continue\n",
     "\n",
-    "        #################################################################################################################\n",
-    "        # to skip already downloaded files                                                                              #\n",
-    "        # if first check is False then others will not be checked so you don't have to ->                               #\n",
-    "        # worry about having last_file_name, last_file_date being initialized because of resume_download check at first #\n",
-    "        #################################################################################################################\n",
+    "        ######### TODO -> check this functions\n",
+    "        # isDownloaded()\n",
+    "        # waitToFinishDownload()\n",
+    "        ##############\n",
+    "\n",
+    "        ####################################\n",
+    "        # To skip already downloaded files #\n",
+    "        ####################################\n",
     "        if isDownloaded(_name):\n",
     "            print(\n",
     "                \"Skipping... {}/{} ---> {}\".format(\n",
@@ -375,7 +376,7 @@
     "            continue\n",
     "\n",
     "        ##########################################################################################################\n",
-    "        # waiting after every 3 donwloads                                                                        #\n",
+    "        # Waiting after every 'download_thread_count' downloads request                                      #\n",
     "        # we have to wait for the files to be downloaded, if we continue without it there maybe some files       #\n",
     "        # that couldn't be downloaded on time (before the link expire) and later on those files can't be resumed #\n",
     "        ##########################################################################################################\n",
@@ -385,11 +386,14 @@
     "            )  # waiting for 600s before closing the connection for slow/no internet\n",
     "\n",
     "            if download_time == -1:\n",
-    "                break  # stoping the scrapper incase of network failure\n",
-    "\n",
-    "        ###################################### download script starts ######################################\n",
-    "\n",
-    "        driver.execute_script(\"arguments[0].click();\", button)\n",
+    "                break  # Stoping the Bot because of a network failure\n",
+    "        \n",
+    "        #####################################################\n",
+    "        # If everything is OK then initiating file download #\n",
+    "        #####################################################\n",
+    "        driver.execute_script(\n",
+    "            \"arguments[0].click();\", button\n",
+    "        )  # Clicking the download button\n",
     "        # wait.until(EC.element_to_be_clickable(button)).click() # this was giving me -> ElementClickInterceptedException\n",
     "\n",
     "        waitNSeconds(0.8)\n",
@@ -397,24 +401,23 @@
     "        try:\n",
     "            download_link = wait.until(\n",
     "                EC.presence_of_element_located(\n",
-    "                    (By.CSS_SELECTOR, \"a[href*='https://www.facebook.com/download/']\")\n",
+    "                    (By.CSS_SELECTOR, download_button_cssSelector)\n",
     "                )\n",
     "            )\n",
+    "\n",
     "            driver.execute_script(\n",
     "                \"arguments[0].target='_self';\", download_link\n",
     "            )  # to prevent it from opening into a new tab\n",
     "            driver.execute_script(\"arguments[0].click();\", download_link)\n",
     "\n",
-    "            registered_files_count += 1  # keeping track of downloaded files\n",
+    "            registered_files_count += 1  # Keeping track of the downloaded files\n",
     "\n",
     "        except:\n",
     "            writeToFile(\n",
     "                \"***** Warning: No download link found at {} *****\".format(idx + 1)\n",
     "            )\n",
     "\n",
-    "        ###################################### download script finished ###################################\n",
-    "\n",
-    "        # updating log\n",
+    "        # Updating log\n",
     "        log = '\"{}\" --- \"{}\" --- \"{}\"'.format(_name, _type, _date)\n",
     "        writeToFile(log)\n",
     "\n",
@@ -427,10 +430,10 @@
     "        waitNSeconds(1.2)\n",
     "\n",
     "        ############## NOT TESTED YET ####################\n",
-    "        file_option_buttons.pop(idx)\n",
-    "        file_names.pop(idx)\n",
-    "        file_types_and_dates.pop(j)\n",
-    "        file_types_and_dates.pop(k)\n",
+    "        # file_option_buttons.pop(idx)\n",
+    "        # file_names.pop(idx)\n",
+    "        # file_types_and_dates.pop(j)\n",
+    "        # file_types_and_dates.pop(k)\n",
     "        ############## NOT TESTED YET ####################\n",
     "\n",
     "    except Exception as e:\n",
