added permalink check

--- a/facebook_group_file_downloader/bot_beta.ipynb
+++ b/facebook_group_file_downloader/bot_beta.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,19 +67,38 @@
     "\n",
     "\"\"\"\n",
     "download_button_cssSelector = \"a[href*='https://www.facebook.com/download/']\"\n",
+    "permalink_xpath = \"//a[contains(@href, 'https://www.facebook.com/groups/201623576939858/permalink/')]\"  # by default finds 15 per-scroll\n",
     "fileOption_xpath = \"//div[@aria-label='File options']\"  # by default finds 15 per-scroll\n",
     "\n",
     "# Target identifiers\n",
     "# They change too often so they have to be present here\n",
     "fileName_xpath = \"//span[@class='d2edcug0 hpfvmrgz qv66sw1b c1et5uql b0tq1wua a8c37x1j fe6kdd0r mau55g9w c8b282yb keod5gw0 nxhoafnm aigsh9s9 d9wwppkn hrzyx87i jq4qci2q a3bd9o3v lrazzd5p oo9gr5id hzawbc8m']\"  # find 15 per-scroll\n",
-    "fileTypeDate_xpath = \"//span[@class='d2edcug0 hpfvmrgz qv66sw1b c1et5uql b0tq1wua a8c37x1j fe6kdd0r mau55g9w c8b282yb keod5gw0 nxhoafnm aigsh9s9 tia6h79c iv3no6db e9vueds3 j5wam9gi b1v8xokw oo9gr5id hzawbc8m']\"  # find 30 per-scroll"
+    "fileTypeDate_xpath = \"//span[@class='d2edcug0 hpfvmrgz qv66sw1b c1et5uql b0tq1wua a8c37x1j fe6kdd0r mau55g9w c8b282yb keod5gw0 nxhoafnm aigsh9s9 tia6h79c iv3no6db e9vueds3 j5wam9gi b1v8xokw oo9gr5id hzawbc8m']\"  # find 30 per-scroll\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Successfully downloaded. Continuing after 6.5s... 🥳\n",
+      "✔ DONE: \"PDF\", \"March 14, 2022 at 5:30 PM\", \"জাতীয় সাহিত্য.pdf\"\n",
+      "\n",
+      "\n",
+      "\n",
+      "👏👏👏 Completed 👏👏👏\n",
+      "\n",
+      "Files downloaded: 1 😉\n",
+      "\n",
+      "Go ahead and give this https://github.com/ShahriarDhruvo/Bots a star, thanks\t--- SED\n"
+     ]
+    }
+   ],
    "source": [
     "j, k = 0, 1\n",
     "\n",
@@ -108,6 +127,11 @@
     "    file_types_and_dates = wait.until(\n",
     "        EC.presence_of_all_elements_located((By.XPATH, fileTypeDate_xpath))\n",
     "    )\n",
+    "\n",
+    "    # This is the unique identifier of a post/file\n",
+    "    post_permalink = wait.until(\n",
+    "        EC.presence_of_all_elements_located((By.XPATH, permalink_xpath))\n",
+    "    )\n",
     "except TimeoutException:\n",
     "    print(\"XPATH's identifier has changed again! 🫡\")\n",
     "\n",
@@ -117,6 +141,7 @@
     "        _name = file_names[idx].text\n",
     "        _type = file_types_and_dates[j].text\n",
     "        _date = file_types_and_dates[k].text\n",
+    "        _permalink = post_permalink[idx].get_attribute(\"href\")\n",
     "\n",
     "        # as 'file_types_and_dates' contains both file-type and date\n",
     "        j += 2\n",
@@ -126,8 +151,8 @@
     "        if button is file_option_buttons[-1]:\n",
     "            [file_option_buttons, file_names, file_types_and_dates] = loadMoreFiles(\n",
     "                driver,\n",
-    "                [file_option_buttons, file_names, file_types_and_dates],\n",
-    "                [fileOption_xpath, fileName_xpath, fileTypeDate_xpath],\n",
+    "                [file_option_buttons, file_names, file_types_and_dates, post_permalink],\n",
+    "                [fileOption_xpath, fileName_xpath, fileTypeDate_xpath, permalink_xpath],\n",
     "            )\n",
     "\n",
     "            updateLog(\"\\nTotal Loaded Files: {}\\n\".format(len(file_option_buttons)))\n",
@@ -140,15 +165,21 @@
     "        \"\"\"\n",
     "        if not _type == target_file_type.upper():\n",
     "            updateLog(\n",
-    "                '\\n😪 Skipping: \"{}\", 🤔 Reason: FILE_TYPE: \"{}\"'.format(_name, _type)\n",
+    "                '\\n😪 Skipping ({}): \"{}\", 🤔 Reason: FILE_TYPE: \"{}\"'.format(\n",
+    "                    idx + 1, _name, _type\n",
+    "                )\n",
     "            )\n",
     "            continue\n",
     "\n",
     "        should_download, update_tracker_file = isDownloaded(\n",
-    "            _name, _date, downloaded_files, tracked_files\n",
+    "            _name, _date, _permalink, downloaded_files, tracked_files\n",
     "        )\n",
     "        if should_download:\n",
-    "            updateLog('\\n😪 Skipping: \"{}\", 🤔 Reason: ALREADY_DOWNLOADED'.format(_name))\n",
+    "            updateLog(\n",
+    "                '\\n😪 Skipping ({}): \"{}\", 🤔 Reason: ALREADY_DOWNLOADED'.format(\n",
+    "                    idx + 1, _name\n",
+    "                )\n",
+    "            )\n",
     "            continue\n",
     "\n",
     "        \"\"\"\n",
@@ -181,6 +212,7 @@
     "                    \"type\": _type,\n",
     "                    \"name\": _name,\n",
     "                    \"uploaded_date\": _date,\n",
+    "                    \"post_permalink\": _permalink,\n",
     "                }\n",
     "            )\n",
     "\n",
@@ -199,7 +231,7 @@
     "        \"\"\" Waiting at least 2s before every download request for safety 😅 \"\"\"\n",
     "\n",
     "        # Updating info after a successful file download 😎\n",
-    "        updateLog('✔ DONE: \"{}\", \"{}\", \"{}\"'.format(_type, _date, _name))\n",
+    "        updateLog('✔ DONE ({}): \"{}\", \"{}\", \"{}\"'.format(idx + 1, _type, _date, _name))\n",
     "\n",
     "        break\n",
     "\n",
