testing and organizing tracker file

--- a/facebook_group_file_downloader/bot_beta.ipynb
+++ b/facebook_group_file_downloader/bot_beta.ipynb
@@ -63,8 +63,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "driver, wait = initializeWebDriver()\n",
-    "login(driver, wait)\n"
+    "driver, web_driver_wait = initializeWebDriver()\n",
+    "login(driver, web_driver_wait)\n"
    ]
   },
   {
@@ -127,16 +127,16 @@
     "\n",
     "# Grabbing initial loadeded targets\n",
     "try:\n",
-    "    file_option_buttons = wait.until(\n",
+    "    file_option_buttons = web_driver_wait.until(\n",
     "        EC.presence_of_all_elements_located((By.XPATH, option_button_xpath))\n",
     "    )\n",
-    "    file_names = wait.until(EC.presence_of_all_elements_located((By.XPATH, name_xpath)))\n",
-    "    file_types_and_dates = wait.until(\n",
+    "    file_names = web_driver_wait.until(EC.presence_of_all_elements_located((By.XPATH, name_xpath)))\n",
+    "    file_types_and_dates = web_driver_wait.until(\n",
     "        EC.presence_of_all_elements_located((By.XPATH, type_date_xpath))\n",
     "    )\n",
     "\n",
     "    # This is the unique identifier of the post that contains this file as attachment\n",
-    "    post_permalink = wait.until(\n",
+    "    post_permalink = web_driver_wait.until(\n",
     "        EC.presence_of_all_elements_located((By.XPATH, post_permalink_xpath))\n",
     "    )\n",
     "except TimeoutException:\n",
@@ -158,7 +158,8 @@
     "        _name = normalizeData(file_names[idx].text)\n",
     "        _type = normalizeData(file_types_and_dates[j].text)\n",
     "        _date = normalizeData(file_types_and_dates[k].text)\n",
-    "        _post_id = normalizeData(post_permalink[idx].get_attribute(\"href\")) #/////////////////////////\n",
+    "        _permalink = normalizeData(post_permalink[idx].get_attribute(\"href\"))\n",
+    "        _post_id = int(_permalink.split(\"/\")[-2])\n",
     "\n",
     "        # as 'file_types_and_dates' contains both file-type and date\n",
     "        j += 2\n",
@@ -213,7 +214,7 @@
     "        \"\"\"\n",
     "        If everything is OK then initializing file download 😁\n",
     "        \n",
-    "        wait.until(EC.element_to_be_clickable(button)).click()\n",
+    "        web_driver_wait.until(EC.element_to_be_clickable(button)).click()\n",
     "        -> this was giving me -> ElementClickInterceptedException\n",
     "\n",
     "        \"\"\"\n",
@@ -224,7 +225,7 @@
     "\n",
     "        # Try to download the file\n",
     "        registered_files_count = downloadFile(\n",
-    "            driver, wait, download_button_xpath, registered_files_count\n",
+    "            driver, web_driver_wait, download_button_xpath, registered_files_count\n",
     "        )\n",
     "\n",
     "        \"\"\"\n",
@@ -307,7 +308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4
  },
