--- a/facebook_group_file_downloader/tmp2.ipynb
+++ b/facebook_group_file_downloader/tmp2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,11 +31,37 @@
     "#                 \"uploaded_date\": info[\"uploaded_date\"],\n",
     "#             }\n",
     "    \n",
-    "#     for idx, info in enumerate(data[\"files\"]):\n",
-    "#         print(info)\n",
+    "#     # for idx, info in enumerate(data[\"files\"]):\n",
+    "#     #     print(info)\n",
     "\n",
     "# with open('registered_files.json', 'w', encoding='utf-8') as f:\n",
     "#     json.dump(data, f, indent=4, ensure_ascii=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "with open('registered_files.json', 'r+', encoding='utf-8') as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "    data[\"files\"] = sorted(data[\"files\"], key=lambda x: x[\"post_id\"])\n",
+    "\n",
+    "    for idx, info in enumerate(data[\"files\"]):\n",
+    "        data[\"files\"][idx] = {\n",
+    "            \"id\": idx + 1,\n",
+    "            \"type\": info[\"type\"],\n",
+    "            \"post_id\": info[\"post_id\"],\n",
+    "            \"name\": info[\"name\"],\n",
+    "            \"uploaded_date\": info[\"uploaded_date\"],\n",
+    "        }\n",
+    "\n",
+    "with open('registered_files.json', 'w', encoding='utf-8') as f:\n",
+    "    json.dump(data, f, indent=4, ensure_ascii=False)"
    ]
   },
   {
@@ -142,6 +168,48 @@
     "    if c1 and c2 and c3:\n",
     "        print(registered_file_list[idx])\n",
     "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.0009961128234863281"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import time\n",
+    "\n",
+    "s = time.time()\n",
+    "\n",
+    "array = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "for idx in range(1, len(array)):\n",
+    "    # if array[idx] == 3:\n",
+    "    array = [1, 2, 3, 4, 5, 6]\n",
+    "\n",
+    "    print(array[idx])\n",
+    "\n",
+    "time.time() - s"
    ]
   }
  ],
