finalizing v2 (know about Graph API? :)

--- a/facebook_group_file_downloader/bot_beta.ipynb
+++ b/facebook_group_file_downloader/bot_beta.ipynb
@@ -9,12 +9,11 @@
     "\"\"\"\n",
     "MUST READ\n",
     "---------\n",
-    "1.  Set your browser's download location to your desired location because\n",
-    "    all files will be downloaded to the download location setted in your browser.\n",
+    "1. Set your browser's download location to the location you want because all files will be downloaded to the location you specified in your browser.\n",
     "\n",
-    "2.  Make sure to turn on 'Allow multiple file download' in your browser\n",
+    "2. Before leaving it alone for the night, make sure to enable 'Allow multiple file downloads' in your browser's website setting.\n",
     "\n",
-    "3.  Create these files when proceeding for the first time\n",
+    "3. Create these files when proceeding for the first time\n",
     "    -> registered_files.json, bot.log, .secret\n",
     "\n",
     "Note\n",
@@ -24,11 +23,14 @@
     "    0 -> username,\n",
     "    1 -> password,\n",
     "    2 -> download directory (for checking)\n",
-    "    3 -> chromewebdriver location (windows)\n",
+    "    3 -> chromewebdriver location (only if you run it in windows)\n",
     "\n",
-    "Thanks -> pythonjar, MariyaSha and some other stackoverflow members...\n",
+    "Acknowledgement\n",
+    "---------------\n",
+    "Thanks -> pythonjar, MariyaSha (YouTuber) and some other stackoverflow members...\n",
     "\n",
     "\"\"\"\n",
+    "\n",
     "import json\n",
     "from json.decoder import JSONDecodeError\n",
     "from selenium.webdriver.common.by import By\n",
@@ -54,17 +56,23 @@
     "    initializeWebDriver,\n",
     "    waitToFinishDownload,\n",
     "    getExistingFilesInfo,\n",
-    ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    ")\n",
+    "\n",
+    "\n",
     "driver, web_driver_wait = initializeWebDriver()\n",
-    "login(driver, web_driver_wait)\n"
+    "\n",
+    "login(driver, web_driver_wait)\n",
+    "\n",
+    "\"\"\"\n",
+    "You should be logged in by now!\n",
+    "\n",
+    "Note\n",
+    "----\n",
+    "if you have 2fa on for this account then you have to authorize it and then run the remaining cells manually\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "facebook_group_url = \"https://www.facebook.com/groups/201623576939858/files/\"\n"
    ]
   },
   {
@@ -73,9 +81,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "facebook_group_url = \"https://www.facebook.com/groups/201623576939858/files/\"\n",
-    "\n",
-    "\n",
     "\"\"\"\n",
     "Targets identifiers\n",
     "-------------------\n",
@@ -91,6 +96,7 @@
     "name_xpath, type_date_xpath -> this identifiers will change continuously so update it according to your needs \n",
     "\n",
     "\"\"\"\n",
+    "\n",
     "option_button_xpath = \"//div[@aria-label='File options']\"\n",
     "download_button_xpath = \"//a[contains(@href, 'https://www.facebook.com/download/')]\"\n",
     "post_permalink_xpath = (\n",
@@ -113,29 +119,32 @@
     "\n",
     "registered_files_count = 0\n",
     "\n",
-    "# Refresh existing files info every time this cell loads\n",
+    "# Refresh existing files information every time this cell loads\n",
     "downloaded_file_list, registered_file_list = getExistingFilesInfo()\n",
     "\n",
     "# Total files registered in the tracker file (registered_files.json)\n",
     "if registered_file_list:\n",
     "    with open(tracker_file_location, \"r\", encoding=encoding) as f:\n",
-    "        # Last registered file id\n",
     "        try:\n",
+    "            # Last registered file id\n",
     "            registered_files_count = int(json.load(f)[\"files\"][-1][\"id\"])\n",
     "        except JSONDecodeError:\n",
     "            pass\n",
+    "\n",
     "\n",
     "# Grabbing initial loadeded targets\n",
     "try:\n",
     "    file_option_buttons = web_driver_wait.until(\n",
     "        EC.presence_of_all_elements_located((By.XPATH, option_button_xpath))\n",
     "    )\n",
-    "    file_names = web_driver_wait.until(EC.presence_of_all_elements_located((By.XPATH, name_xpath)))\n",
+    "    file_names = web_driver_wait.until(\n",
+    "        EC.presence_of_all_elements_located((By.XPATH, name_xpath))\n",
+    "    )\n",
     "    file_types_and_dates = web_driver_wait.until(\n",
     "        EC.presence_of_all_elements_located((By.XPATH, type_date_xpath))\n",
     "    )\n",
     "\n",
-    "    # This is the unique identifier of the post that contains this file as attachment\n",
+    "    # This is the unique identifier of the post which contains files as attachment(s)\n",
     "    post_permalink = web_driver_wait.until(\n",
     "        EC.presence_of_all_elements_located((By.XPATH, post_permalink_xpath))\n",
     "    )\n",
@@ -183,12 +192,14 @@
     "                ],\n",
     "            )\n",
     "\n",
-    "            updateLog(\"\\nTotal Loaded Files: {}\\n\".format(len(file_option_buttons)))\n",
+    "            updateLog(\"\\nTotal files loaded: {}\\n\".format(len(file_option_buttons)))\n",
     "\n",
     "        \"\"\"\n",
     "        Download pdf files only\n",
-    "        Cannot check this before the scroll because\n",
-    "        here is a possibility to have more than one page worth of non-pdf files\n",
+    "\n",
+    "        Note\n",
+    "        ----\n",
+    "        Cannot check this before the scroll because here is a possibility to have more than one page worth of non-pdf files\n",
     "        \n",
     "        \"\"\"\n",
     "        if not _type == target_file_type.upper():\n",
@@ -202,7 +213,7 @@
     "        is_downloaded, update_tracker_file = checkDownloadStatus(\n",
     "            _post_id, _name, _date, downloaded_file_list, registered_file_list\n",
     "        )\n",
-    "        \n",
+    "\n",
     "        if is_downloaded:\n",
     "            updateLog(\n",
     "                '😪 Skipping ({}): \"{} --- {}\", 🤔 Reason: ALREADY_DOWNLOADED'.format(\n",
@@ -230,6 +241,9 @@
     "\n",
     "        \"\"\"\n",
     "        Waiting until the file gets downloaded completely\n",
+    "\n",
+    "        Note\n",
+    "        ----\n",
     "        We have to wait for the file to be downloaded, if we continue without it there maybe some files\n",
     "        that couldn't be downloaded on time (before the link expire) and later on those files can't be resumed\n",
     "        \n",
@@ -261,13 +275,18 @@
     "                }\n",
     "            )\n",
     "\n",
-    "        # Waiting 600s before stoping the Bot for slow/no internet 😟\n",
+    "        # Waiting 30 minutes before stoping the Bot for slow/no internet 😟\n",
     "        if download_time == -1:\n",
     "            break\n",
     "\n",
-    "        \"\"\" Waiting at least 2s before every download request for safety 😅 \"\"\"\n",
+    "        \"\"\"\n",
+    "        Updating info after a successful file download 😎\n",
     "\n",
-    "        # Updating info after a successful file download 😎\n",
+    "        Note\n",
+    "        ----\n",
+    "        Waiting at least 2s before every download request for safety 😅\n",
+    "        \n",
+    "        \"\"\"\n",
     "        updateLog('✔ DONE ({}): \"{}\", \"{}\"'.format(idx + 1, _name, _date))\n",
     "\n",
     "        # For testing.............\n",
@@ -308,7 +327,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.2"
   },
   "orig_nbformat": 4
  },
