--- a/facebook_group_file_downloader/bot_v2/main.ipynb
+++ b/facebook_group_file_downloader/bot_v2/main.ipynb
@@ -2,19 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
     "MUST READ\n",
     "---------\n",
-    "1. Set your browser's download location to the location you want because all files will be downloaded to the location you specified in your browser.\n",
-    "\n",
-    "2. Before leaving it alone for the night, make sure to enable 'Allow multiple file downloads' in your browser's website setting.\n",
-    "\n",
-    "3. Create these files when proceeding for the first time\n",
-    "    -> registered_files.json, bot.log, .secret\n",
+    "1. In 'constants.py,' change the value of 'download directory' to match yours.\n",
+    "2. Make a '.secret' file and fill it with the essential information.\n",
     "\n",
     "Note\n",
     "----\n",
@@ -22,8 +18,7 @@
     "\n",
     "    0 -> username,\n",
     "    1 -> password,\n",
-    "    2 -> download directory (for checking)\n",
-    "    3 -> chromewebdriver location (only if you run it in windows)\n",
+    "    2 -> chromewebdriver location (only if you run it in windows, on Linux just install the chromedriver package)\n",
     "\n",
     "Acknowledgement\n",
     "---------------\n",
@@ -41,6 +36,7 @@
     "    secrets,\n",
     "    encoding,\n",
     "    target_file_type,\n",
+    "    download_directory,\n",
     "    tracker_file_location,\n",
     ")\n",
     "from helperFunctions import (\n",
@@ -70,9 +66,7 @@
     "----\n",
     "if you have 2fa on for this account then you have to authorize it and then run the remaining cells manually\n",
     "\n",
-    "\"\"\"\n",
-    "\n",
-    "facebook_group_url = \"https://www.facebook.com/groups/201623576939858/files/\"\n"
+    "\"\"\"\n"
    ]
   },
   {
@@ -81,6 +75,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "facebook_group_url = \"https://www.facebook.com/groups/201623576939858/files/\"\n",
+    "\n",
     "\"\"\"\n",
     "Targets identifiers\n",
     "-------------------\n",
@@ -248,7 +244,7 @@
     "        that couldn't be downloaded on time (before the link expire) and later on those files can't be resumed\n",
     "        \n",
     "        \"\"\"\n",
-    "        download_time = waitToFinishDownload(secrets[2])\n",
+    "        download_time = waitToFinishDownload(download_directory)\n",
     "\n",
     "        \"\"\"\n",
     "        Updating tracker file after a successful file download 😎\n",
@@ -268,8 +264,8 @@
     "            appendFilesInfo(\n",
     "                {\n",
     "                    \"id\": registered_files_count,\n",
-    "                    \"post_id\": _post_id,\n",
     "                    \"type\": _type,\n",
+    "                    \"post_id\": _post_id,\n",
     "                    \"name\": _name,\n",
     "                    \"uploaded_date\": _date,\n",
     "                }\n",
@@ -290,18 +286,18 @@
     "        updateLog('✔ DONE ({}): \"{}\", \"{}\"'.format(idx + 1, _name, _date))\n",
     "\n",
     "        # For testing.............\n",
-    "        break\n",
+    "        # break\n",
     "\n",
     "    except Exception as e:\n",
     "        updateLog(\"\\n*** ERROR at {}, date: {} ***\\n--> {}\\n\".format(_name, _date, e))\n",
     "\n",
     "\n",
-    "# updateLog(\n",
-    "#     \"\\n\\n\\n👏👏👏 Completed 👏👏👏\\n\\nFiles downloaded: {} 😉\\n\".format(registered_files_count)\n",
-    "# )\n",
-    "# updateLog(\n",
-    "#     \"Go ahead and give this https://github.com/ShahriarDhruvo/Bots a star, thanks\\t--- SED\"\n",
-    "# )\n",
+    "updateLog(\n",
+    "    \"\\n\\n\\n👏👏👏 Completed 👏👏👏\\n\\nFiles downloaded: {} 😉\\n\".format(registered_files_count)\n",
+    ")\n",
+    "updateLog(\n",
+    "    \"Go ahead and give this https://github.com/ShahriarDhruvo/Bots a star, thanks\\t--- SED\"\n",
+    ")\n",
     "\n",
     "\n",
     "# driver.close() # not closing because I had to run this cell multiple times during test\n"
@@ -327,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4
  },
